@@ -1,3 +1,4 @@
+data/
 Geo-UK-Postcode-Regex*
 blib/
 .build/
